# Product_Intelligent_Knowledge_Base

./: .env.example  .gitignore  README.md  pyproject.toml
app/clients/: minio_utils.py
app/core/: logger.py
app/import_process/: 导入过程记录文档.txt
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: import_server.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_server.py
app/query_process/page/: chat.html
milvus/: docker-compose.yml
